--- a/IT Eng Team/Key_diff_dev&idp.html
+++ b/IT Eng Team/Key_diff_dev&idp.html
@@ -272,7 +272,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -284,7 +284,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -296,7 +296,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -611,7 +611,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -623,7 +623,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -635,7 +635,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
