--- a/Innovatie Integration/informatica-to-qlik-talend.html
+++ b/Innovatie Integration/informatica-to-qlik-talend.html
@@ -262,7 +262,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -577,7 +577,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -706,15 +706,10 @@
                             </div>
                             <div class="company-overview">
                                 <h1 class="display-5 fw-bold">Informatica to Qlik Talend Conversion</h1>
-                                <p class="lead mb-0">Modernize your legacy ETL by migrating from Informatica PowerCenter/IDMC to Qlik Talend with automated CI/CD from day 1.</p>
+                                <p class="lead mb-0">Automatically convert your Informatica PowerCenter/IDMC jobs to Qlik Talend — with Devozy.ai's built-in migration tool and CI/CD pipelines.</p>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-3 col-12">
-                        <div class="action-btns mt-4 mt-lg-0 mt-xl-0">
-                            <a href="javascript:;" class="btn btn-outline-light">Connect with Google</a>
-                        </div>
-                    </div> -->
                 </div>
 
                 <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-dark-light right-5"></div>
@@ -728,21 +723,19 @@
                 <div class="row justify-content-between">
                     <div class="col-lg-8 pe-lg-5">
                         <div class="integration-details-wrap">
-                            <h2>Why Migrate from Informatica to Qlik Talend?</h2>
-                            <p>Informatica PowerCenter has been a market leader in ETL for decades, but rising licensing costs, complex upgrades, and limited cloud-native support are pushing enterprises to modernize. Qlik Talend offers a powerful, cost-effective alternative with open-source roots, cloud-native architecture, and seamless CI/CD integration through Devozy.ai.
+                            <h2>Automate Your Informatica to Qlik Talend Migration</h2>
+                            <p>Migrating from Informatica PowerCenter or IDMC to Qlik Talend doesn’t have to mean months of manual rework. Devozy.ai’s migration tool automates the conversion — analyzing your existing Informatica jobs, mappings, and workflows, then generating equivalent Qlik Talend jobs ready for deployment. What used to take weeks of manual effort per job now happens in a fraction of the time.
                             </p>
                             <div class="integration-feature-info mt-5">
                                 <ul class="content-list list-unstyled">
-                                    <li> <b>Reduce Licensing Costs</b> Informatica’s enterprise licensing can be 3-5x more expensive than Qlik Talend. Migrate and save significantly on annual ETL platform costs.</li>
-                                    <li> <b>Cloud-Native Architecture</b> Qlik Talend Cloud is built for multi-cloud environments (AWS, Azure, GCP) — no more on-premise infrastructure overhead.</li>
-                                    <li> <b>Built-in CI/CD with Devozy.ai</b> Automate job deployments, version control, and testing from day 1 — something Informatica requires custom scripting to achieve.</li>
-                                    <li> <b>Faster Development Cycles</b> Talend’s visual designer and 900+ pre-built connectors accelerate ETL development compared to Informatica’s heavyweight IDE.</li>
-                                    <li> <b>Open-Source Ecosystem</b> Leverage Talend’s open-source community for custom components, connectors, and extensions without vendor lock-in.</li>
-                                    <li> <b>Simplified Job Migration</b> Devozy.ai provides structured migration workflows to convert Informatica mappings, sessions, and workflows to Talend jobs systematically.</li>
-                                    <li> <b>Multi-Cloud Flexibility</b> Deploy ETL pipelines across AWS, Azure, and GCP without platform-specific constraints that Informatica imposes.</li>
-                                    <li> <b>Real-Time Data Processing</b> Talend supports real-time streaming and batch processing natively — modernize beyond Informatica’s batch-first approach.</li>
-                                    <li> <b>Version Control Integration</b> Native Git integration for Talend jobs with Devozy.ai’s automated branching, merging, and deployment pipelines.</li>
-                                    <li> <b>Automated Testing & Deployment</b> Devozy.ai enables automated unit testing, regression testing, and one-click deployments for Talend jobs across Dev, QA, and Production.</li>
+                                    <li> <b>Automated Job Conversion</b> Devozy.ai’s migration tool reads your Informatica mappings, transformations, and session configs, then generates the equivalent Qlik Talend jobs automatically. No manual re-creation needed.</li>
+                                    <li> <b>Mapping Analysis & Inventory</b> Before migration starts, the tool scans your entire Informatica repository — cataloging mappings, workflows, sessions, and dependencies so you know exactly what you’re working with.</li>
+                                    <li> <b>Transformation Logic Preserved</b> Source-to-target mappings, filters, expressions, lookups, and aggregations are translated to their Talend equivalents. Your business logic stays intact through the conversion.</li>
+                                    <li> <b>Connection & Source Migration</b> Database connections, file sources, and API endpoints are mapped to Talend’s 900+ native connectors. The tool handles the configuration translation so your data pipelines reconnect seamlessly.</li>
+                                    <li> <b>Validation & Testing Built In</b> Every converted job goes through automated validation — data type checks, schema comparisons, and output verification against the original Informatica job to ensure accuracy.</li>
+                                    <li> <b>CI/CD Pipelines from Day One</b> Converted Talend jobs are immediately plugged into Devozy.ai’s deployment pipelines with Git version control, automated testing, and one-click promotion across Dev, QA, and Production.</li>
+                                    <li> <b>Cut Licensing Costs</b> Informatica enterprise licensing typically runs 3-5x more than Qlik Talend. The migration tool helps you make the switch faster, so you start saving sooner.</li>
+                                    <li> <b>Migration Dashboard & Reporting</b> Track your migration progress in real time — jobs scanned, converted, validated, and deployed. Full visibility for project managers and stakeholders at every stage.</li>
                                 </ul>
                             </div>
                             <img src="../talendillustration.png" class="img-fluid mt-4 rounded-custom" alt="Informatica to Qlik Talend Migration">
@@ -751,55 +744,31 @@
                     <div class="col-lg-4">
                         <div class="job-overview-wrap bg-light-subtle p-5 sticky-sidebar rounded-custom mt-5 mt-lg-0">
 
-  <!-- Cloud Resource Utilization -->
-  <!-- <h3 style="color: #333; ">Cloud Resource Utilization</h3>
-  <p style="color: #555; font-size: 14px; margin-top: 10px;">
-    Monitor real-time resource utilization including <strong>CPU</strong>, <strong>RAM</strong>, and <strong>Disk</strong> usage for your cloud instance.
-  </p>
-  <div style="display: flex; align-items: center; margin-top: 20px;">
-    <i class="fas fa-microchip" style="font-size: 30px; color: #007bff; margin-right: 15px;"></i>
-    <div style="text-align: left;">
-      <h5 style="margin: 0;">CPU Utilization</h5>
-    </div>
-  </div>
-  <div style="display: flex; align-items: center; margin-top: 20px;">
-    <i class="fas fa-memory" style="font-size: 30px; color: #ffc107; margin-right: 15px;"></i>
-    <div style="text-align: left;">
-      <h5 style="margin: 0;">RAM Utilization</h5>
-    </div>
-  </div>
-  <div style="display: flex; align-items: center; margin-top: 20px;">
-    <i class="fas fa-hdd" style="font-size: 30px; color: #dc3545; margin-right: 15px;"></i>
-    <div style="text-align: left;">
-      <h5 style="margin: 0;">Disk Usage</h5>
-    </div>
-  </div> -->
-<!-- </div> -->
 <div class="integration-summary">
     <!-- Card 1 -->
     <div class="summary-card">
-      <div class="summary-icon">💰</div>
-      <div class="summary-title">Cost Reduction</div>
+      <div class="summary-icon">🔄</div>
+      <div class="summary-title">Automated Conversion</div>
       <div class="summary-desc">
-        Save 3-5x on licensing by migrating from Informatica to Qlik Talend's flexible pricing model.
+        Devozy.ai's migration tool converts Informatica mappings, workflows, and sessions to Qlik Talend jobs automatically.
       </div>
     </div>
 
     <!-- Card 2 -->
     <div class="summary-card">
-      <div class="summary-icon">🔄</div>
-      <div class="summary-title">Seamless Migration</div>
+      <div class="summary-icon">✅</div>
+      <div class="summary-title">Built-In Validation</div>
       <div class="summary-desc">
-        Structured conversion workflows to migrate Informatica mappings, sessions, and workflows to Talend jobs.
+        Every converted job is validated against the original — schema checks, data type matching, and output verification.
       </div>
     </div>
 
     <!-- Card 3 -->
     <div class="summary-card">
       <div class="summary-icon">🚀</div>
-      <div class="summary-title">Accelerated Delivery</div>
+      <div class="summary-title">Deploy Immediately</div>
       <div class="summary-desc">
-        CI/CD pipelines for Talend from day 1 with automated testing, version control, and deployments.
+        Converted jobs plug straight into CI/CD pipelines with Git version control and one-click deployment.
       </div>
     </div>
   </div>
