--- a/Innovatie Integration/qlik-sense-cicd.html
+++ b/Innovatie Integration/qlik-sense-cicd.html
@@ -262,7 +262,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -577,7 +577,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -710,11 +710,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-3 col-12">
-                        <div class="action-btns mt-4 mt-lg-0 mt-xl-0">
-                            <a href="javascript:;" class="btn btn-outline-light">Connect with Google</a>
-                        </div>
-                    </div> -->
                 </div>
 
                 <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-dark-light right-5"></div>
@@ -729,20 +724,20 @@
                     <div class="col-lg-8 pe-lg-5">
                         <div class="integration-details-wrap">
                             <h2>Why Automate Qlik Sense App Promotion?</h2>
-                            <p>Teams managing Qlik Sense apps across environments face critical challenges — error-prone manual processes, zero visibility into changes, and no audit trail for compliance. Devozy.ai solves this with automated app promotion, deep change tracking, and role-based approval workflows built on Qlik’s official APIs.
+                            <p>If you’re managing Qlik Sense apps across Dev, UAT, and Production today, you’re probably doing it manually — exporting apps, importing into the next space, hoping nothing breaks. There’s no built-in way to track what changed, who approved it, or roll back if something goes wrong. Devozy.ai fixes all of that.
                             </p>
                             <div class="integration-feature-info mt-5">
                                 <ul class="content-list list-unstyled">
-                                    <li> <b>One-Click App Promotion</b> Move Qlik Sense apps from Dev to UAT to Production with a single click — no more copy-pasting apps between spaces manually.</li>
-                                    <li> <b>App Comparison & Change Tracking</b> See exactly what changed — measures, dimensions, variables, sheets, scripts, visualizations — before promoting to the next environment.</li>
-                                    <li> <b>Approval Workflow & Governance</b> Role-based approval gates ensure only reviewed and authorized changes reach production. Maintainers request, admins approve.</li>
-                                    <li> <b>Full Audit Trail</b> Every deployment is logged with who deployed what, when, and why — essential for compliance and governance audits.</li>
-                                    <li> <b>GitHub Backup & Version Control</b> Automatic app backups to GitHub with full version history. Restore any previous version instantly with rollback capability.</li>
-                                    <li> <b>Multi-Environment Pipeline</b> Manage Dev, UAT, and Production Qlik Cloud spaces from a single dashboard with automated promotion flows.</li>
-                                    <li> <b>Risk Reduction</b> Never deploy blind again — review all changes side-by-side with formula comparisons before promoting apps across environments.</li>
-                                    <li> <b>Email Notifications</b> Automatic alerts to the admin team when a promotion request needs approval, keeping the entire team aligned and accountable.</li>
-                                    <li> <b>Instant Rollback</b> Something went wrong in production? Restore any previous app version instantly from GitHub backups with a single click.</li>
-                                    <li> <b>Multi-Tenant Architecture</b> Secure, isolated deployment for each organization with Google Cloud KMS encryption and tenant-level data separation.</li>
+                                    <li> <b>Promote Apps in One Click</b> Stop copy-pasting QVFs between Qlik Cloud spaces. Select your app, pick the target environment, click promote. That’s it — Dev to UAT to Production, handled.</li>
+                                    <li> <b>See What Changed Before You Ship</b> Devozy compares app versions side-by-side — measures, dimensions, variables, sheets, scripts, and visualizations. You’ll know exactly what’s different before anything reaches production.</li>
+                                    <li> <b>Approval Gates That Make Sense</b> Maintainers request a promotion, admins review and approve. No one pushes to production without sign-off. It’s the governance your compliance team has been asking for.</li>
+                                    <li> <b>Every Deployment, Fully Logged</b> Who deployed what, when, and from which version — it’s all recorded. When auditors come asking, you’ve got a complete trail instead of a shrug.</li>
+                                    <li> <b>Automatic GitHub Backups</b> Every app version gets backed up to GitHub automatically. Full version history, browsable diffs, and the ability to restore any previous version whenever you need it.</li>
+                                    <li> <b>One Dashboard for All Environments</b> Manage your Dev, UAT, and Production Qlik Cloud spaces from a single view. See what’s deployed where, what’s pending approval, and what’s in progress — all in one place.</li>
+                                    <li> <b>Never Deploy Blind</b> Before any promotion, review changes side-by-side with formula-level comparisons. Catch issues before they hit production, not after your users report them.</li>
+                                    <li> <b>Stay in the Loop</b> Automatic email alerts when a promotion request needs review. No more Slack messages or missed approvals — the right people get notified at the right time.</li>
+                                    <li> <b>Roll Back in Seconds</b> Production issue? Pick the previous working version from your GitHub backup history and restore it with one click. Downtime measured in seconds, not hours.</li>
+                                    <li> <b>Built for Multiple Teams</b> Each organization gets isolated, secure deployment with Google Cloud KMS encryption and tenant-level separation. Your data stays yours.</li>
                                 </ul>
                             </div>
                             <img src="../talendillustration.png" class="img-fluid mt-4 rounded-custom" alt="Qlik Sense CI/CD Automated Promotion">
@@ -751,30 +746,6 @@
                     <div class="col-lg-4">
                         <div class="job-overview-wrap bg-light-subtle p-5 sticky-sidebar rounded-custom mt-5 mt-lg-0">
 
-  <!-- Cloud Resource Utilization -->
-  <!-- <h3 style="color: #333; ">Cloud Resource Utilization</h3>
-  <p style="color: #555; font-size: 14px; margin-top: 10px;">
-    Monitor real-time resource utilization including <strong>CPU</strong>, <strong>RAM</strong>, and <strong>Disk</strong> usage for your cloud instance.
-  </p>
-  <div style="display: flex; align-items: center; margin-top: 20px;">
-    <i class="fas fa-microchip" style="font-size: 30px; color: #007bff; margin-right: 15px;"></i>
-    <div style="text-align: left;">
-      <h5 style="margin: 0;">CPU Utilization</h5>
-    </div>
-  </div>
-  <div style="display: flex; align-items: center; margin-top: 20px;">
-    <i class="fas fa-memory" style="font-size: 30px; color: #ffc107; margin-right: 15px;"></i>
-    <div style="text-align: left;">
-      <h5 style="margin: 0;">RAM Utilization</h5>
-    </div>
-  </div>
-  <div style="display: flex; align-items: center; margin-top: 20px;">
-    <i class="fas fa-hdd" style="font-size: 30px; color: #dc3545; margin-right: 15px;"></i>
-    <div style="text-align: left;">
-      <h5 style="margin: 0;">Disk Usage</h5>
-    </div>
-  </div> -->
-<!-- </div> -->
 <div class="integration-summary">
     <!-- Card 1 -->
     <div class="summary-card">
