--- a/Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html
+++ b/Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html
@@ -262,7 +262,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -577,7 +577,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -706,15 +706,10 @@
                             </div>
                             <div class="company-overview">
                                 <h1 class="display-5 fw-bold">Migrate to Qlik Sense</h1>
-                                <p class="lead mb-0">Convert your Tableau, Power BI, and Cognos reports to Qlik Sense — unlock the power of associative analytics.</p>
+                                <p class="lead mb-0">Automatically convert your Tableau, Power BI, and Cognos reports to Qlik Sense — with Devozy.ai's built-in migration tool.</p>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-3 col-12">
-                        <div class="action-btns mt-4 mt-lg-0 mt-xl-0">
-                            <a href="javascript:;" class="btn btn-outline-light">Connect with Google</a>
-                        </div>
-                    </div> -->
                 </div>
 
                 <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-dark-light right-5"></div>
@@ -728,21 +723,20 @@
                 <div class="row justify-content-between">
                     <div class="col-lg-8 pe-lg-5">
                         <div class="integration-details-wrap">
-                            <h2>Why Convert to Qlik Sense?</h2>
-                            <p>Tableau, Power BI, and Cognos are widely used BI tools, but they rely on query-based data exploration that limits how users discover insights. Qlik Sense’s unique Associative Engine lets users explore data freely in any direction — no predefined queries, no hidden insights. Paired with lower total cost of ownership and Devozy.ai’s automated deployment pipelines, migrating to Qlik Sense is a strategic upgrade for modern analytics teams.
+                            <h2>Automate Your BI Migration to Qlik Sense</h2>
+                            <p>Rebuilding hundreds of Tableau workbooks, Power BI reports, or Cognos dashboards from scratch in Qlik Sense isn’t realistic. Devozy.ai’s migration tool automates the conversion — it analyzes your existing reports, extracts the data models, visualizations, and logic, then generates equivalent Qlik Sense apps. Your team focuses on refining the output, not recreating everything manually.
                             </p>
                             <div class="integration-feature-info mt-5">
                                 <ul class="content-list list-unstyled">
-                                    <li> <b>Associative Analytics Engine</b> Unlike Tableau and Power BI’s query-based approach, Qlik Sense’s Associative Engine highlights relationships across all your data — revealing insights others miss.</li>
-                                    <li> <b>Superior Data Exploration</b> Users can click any data point and instantly see related and unrelated data across every dimension — no drilling paths or hierarchies required.</li>
-                                    <li> <b>Reduce BI Licensing Costs</b> Qlik Sense offers competitive pricing compared to Tableau Enterprise and Power BI Premium. Consolidate multiple BI tools into one platform and save.</li>
-                                    <li> <b>Self-Service Analytics</b> Empower business users to build dashboards and reports independently without relying on IT teams — governed, secure, and scalable.</li>
-                                    <li> <b>Embedded Analytics</b> Embed Qlik Sense visualizations directly into your applications, portals, and workflows — something Cognos makes complex and costly.</li>
-                                    <li> <b>Multi-Source Data Integration</b> Connect to 100+ data sources natively. Combine data from databases, cloud apps, spreadsheets, and APIs in a single analytics layer.</li>
-                                    <li> <b>Governed Self-Service</b> IT maintains control over data governance, security, and access policies while business users create their own analytics — the best of both worlds.</li>
-                                    <li> <b>AI-Powered Insights</b> Qlik AutoML and Insight Advisor use AI to automatically suggest analyses, detect trends, and generate natural language explanations of your data.</li>
-                                    <li> <b>Cloud-Native Deployment</b> Qlik Sense SaaS runs on AWS/Azure with automatic updates, scaling, and zero infrastructure management. Devozy.ai automates app deployment across environments.</li>
-                                    <li> <b>Automated Report Migration</b> Devozy.ai provides structured workflows to systematically convert Tableau workbooks, Power BI reports, and Cognos dashboards to Qlik Sense apps.</li>
+                                    <li> <b>Automated Report Conversion</b> Devozy.ai’s migration tool reads your Tableau workbooks, Power BI .pbix files, and Cognos report specs, then generates equivalent Qlik Sense apps — dashboards, charts, filters, and calculated fields included.</li>
+                                    <li> <b>Report Inventory & Analysis</b> Before conversion begins, the tool scans your entire BI environment — cataloging every report, data source, user dependency, and usage pattern so you can prioritize what migrates first.</li>
+                                    <li> <b>Data Model Translation</b> Tableau extracts, Power BI datasets, and Cognos data modules are converted to Qlik Sense’s associative data model. Relationships, calculated columns, and measures are mapped accurately.</li>
+                                    <li> <b>Visual & Layout Mapping</b> Chart types, color schemes, filter panels, and dashboard layouts are translated to their Qlik Sense equivalents. Your users see familiar reports on a better platform.</li>
+                                    <li> <b>Validation & Side-by-Side Comparison</b> Every converted app is validated against the original — data accuracy checks, visual comparisons, and metric verification to make sure nothing was lost in translation.</li>
+                                    <li> <b>Unlock Associative Analytics</b> Once migrated, your reports gain Qlik’s Associative Engine — users explore data freely in any direction, uncovering connections that query-based tools like Tableau and Power BI simply can’t surface.</li>
+                                    <li> <b>CI/CD for Qlik Sense Apps</b> Converted apps plug directly into Devozy.ai’s deployment pipelines — automated promotion across Dev, UAT, and Production with change tracking and approval workflows.</li>
+                                    <li> <b>Consolidate BI Licensing</b> Stop paying for Tableau, Power BI, and Cognos in parallel. The migration tool accelerates the switch to one platform, so you start saving on licensing sooner.</li>
+                                    <li> <b>Migration Dashboard & Progress Tracking</b> Track every report through the pipeline — scanned, converted, validated, deployed. Full visibility for project managers and stakeholders at every stage.</li>
                                 </ul>
                             </div>
                             <img src="../talendillustration.png" class="img-fluid mt-4 rounded-custom" alt="Migrate to Qlik Sense from Tableau Power BI Cognos">
@@ -751,55 +745,31 @@
                     <div class="col-lg-4">
                         <div class="job-overview-wrap bg-light-subtle p-5 sticky-sidebar rounded-custom mt-5 mt-lg-0">
 
-  <!-- Cloud Resource Utilization -->
-  <!-- <h3 style="color: #333; ">Cloud Resource Utilization</h3>
-  <p style="color: #555; font-size: 14px; margin-top: 10px;">
-    Monitor real-time resource utilization including <strong>CPU</strong>, <strong>RAM</strong>, and <strong>Disk</strong> usage for your cloud instance.
-  </p>
-  <div style="display: flex; align-items: center; margin-top: 20px;">
-    <i class="fas fa-microchip" style="font-size: 30px; color: #007bff; margin-right: 15px;"></i>
-    <div style="text-align: left;">
-      <h5 style="margin: 0;">CPU Utilization</h5>
-    </div>
-  </div>
-  <div style="display: flex; align-items: center; margin-top: 20px;">
-    <i class="fas fa-memory" style="font-size: 30px; color: #ffc107; margin-right: 15px;"></i>
-    <div style="text-align: left;">
-      <h5 style="margin: 0;">RAM Utilization</h5>
-    </div>
-  </div>
-  <div style="display: flex; align-items: center; margin-top: 20px;">
-    <i class="fas fa-hdd" style="font-size: 30px; color: #dc3545; margin-right: 15px;"></i>
-    <div style="text-align: left;">
-      <h5 style="margin: 0;">Disk Usage</h5>
-    </div>
-  </div> -->
-<!-- </div> -->
 <div class="integration-summary">
     <!-- Card 1 -->
     <div class="summary-card">
-      <div class="summary-icon">📊</div>
-      <div class="summary-title">Smarter Analytics</div>
+      <div class="summary-icon">🔄</div>
+      <div class="summary-title">Automated Conversion</div>
       <div class="summary-desc">
-        Qlik's Associative Engine reveals hidden insights that query-based tools like Tableau and Power BI miss.
+        Devozy.ai's tool converts Tableau, Power BI, and Cognos reports to Qlik Sense apps automatically.
       </div>
     </div>
 
     <!-- Card 2 -->
     <div class="summary-card">
-      <div class="summary-icon">💰</div>
-      <div class="summary-title">Lower TCO</div>
+      <div class="summary-icon">✅</div>
+      <div class="summary-title">Built-In Validation</div>
       <div class="summary-desc">
-        Consolidate Tableau, Power BI, and Cognos into one platform — reduce BI licensing and maintenance costs.
+        Every converted app is verified against the original — data accuracy, visuals, and metrics checked.
       </div>
     </div>
 
     <!-- Card 3 -->
     <div class="summary-card">
-      <div class="summary-icon">⚡</div>
-      <div class="summary-title">Faster Migration</div>
+      <div class="summary-icon">📊</div>
+      <div class="summary-title">Migration Dashboard</div>
       <div class="summary-desc">
-        Structured conversion workflows to systematically migrate dashboards, reports, and data models to Qlik Sense.
+        Track every report through the pipeline — scanned, converted, validated, and deployed in real time.
       </div>
     </div>
   </div>
