--- a/IT Eng Team/agile_int_devops.html
+++ b/IT Eng Team/agile_int_devops.html
@@ -266,7 +266,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -278,7 +278,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -290,7 +290,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -605,7 +605,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -617,7 +617,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -629,7 +629,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
