--- a/IT Eng Team/idp_market_research.html
+++ b/IT Eng Team/idp_market_research.html
@@ -271,7 +271,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -283,7 +283,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -295,7 +295,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -610,7 +610,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -622,7 +622,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -634,7 +634,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
