--- a/IT Eng Team/value_adds_it.html
+++ b/IT Eng Team/value_adds_it.html
@@ -268,7 +268,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -280,7 +280,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -292,7 +292,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -607,7 +607,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -619,7 +619,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -631,7 +631,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
