--- a/Innovatie Integration/gcp-integration.html
+++ b/Innovatie Integration/gcp-integration.html
@@ -263,7 +263,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -275,7 +275,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -287,7 +287,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
@@ -602,7 +602,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -614,7 +614,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -626,7 +626,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="../Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="../qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="../../Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
