--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                                             <a target="_self" class="dropdown-item"
                                             href="Innovatie Integration/informatica-to-qlik-talend.html">
                                               <span class="me-2">
-                                                <img  style="height: 38px; width:38px" src="qlik-talend-logo.svg"></img>
+                                                <img  style="height: 38px; width:38px" src="Qlik_Logo.png"></img>
                                               </span>
                                               <div style="margin-left: 12px;">
                                                 <div class="drop-title">Informatica to Qlik Talend</div>
@@ -465,7 +465,7 @@
                                             <a target="_self" class="dropdown-item"
                                             href="Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                               <span class="me-2">
-                                                <img  style="height: 38px; width:38px" src="qlik-talend-logo.svg"></img>
+                                                <img  style="height: 38px; width:38px" src="Qlik_Logo.png"></img>
                                               </span>
                                               <div style="margin-left: 12px;">
                                                 <div class="drop-title">Migrate to Qlik Sense</div>
@@ -478,7 +478,7 @@
                                             <a target="_self" class="dropdown-item"
                                             href="Innovatie Integration/qlik-sense-cicd.html">
                                               <span class="me-2">
-                                                <img  style="height: 34px; width: 34px" src="qlik-talend-logo.svg"></img>
+                                                <img  style="height: 34px; width: 34px" src="Qlik_Logo.png"></img>
                                               </span>
                                               <div style="margin-left: 12px;">
                                                 <div class="drop-title">Qlik Sense CICD</div>
@@ -806,7 +806,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="Innovatie Integration/informatica-to-qlik-talend.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Informatica to Qlik Talend</div>
@@ -819,7 +819,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="Innovatie Integration/tableau-powerbi-cognos-to-qlik-sense.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Migrate to Qlik Sense</div>
@@ -832,7 +832,7 @@
                                         <a target="_self" class="dropdown-item"
                                         href="Innovatie Integration/qlik-sense-cicd.html">
                                           <span class="me-2">
-                                            <img  style="height: 34px; width: 34px" src="qlik-talend-logo.svg"></img>
+                                            <img  style="height: 34px; width: 34px" src="Qlik_Logo.png"></img>
                                           </span>
                                           <div style="margin-left: 12px;">
                                             <div class="drop-title">Qlik Sense CICD</div>
